--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
             margin: 0 auto;
             position: relative;
             z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
         .container .btnStart {
             position: absolute;
-            top: 71%;
+            top: 70%;
             left: 50%;
             transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             background-color: transparent;
             font-size: 16px;
-            padding: 65px 65px;
+            padding: 58px 58px;
             border: none;
             cursor: pointer;
             border-radius: 5px;
@@ -36,6 +40,14 @@
             background-color: transparent;
         }
 
+        body{
+            margin: 0;
+            background-color: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
         #canvas{
             position: relative;
             z-index:20;
